--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
 
     // mockito
     testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'android.arch.core:core-testing:1.1.0'
 }
