Added Pkg for RXJava and CallBack Listerner for Login Module.

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,9 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url "https://github.com/wickie73/mockito4kotlin.annotation.git"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
