--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
+    //testImplementation 'junit:junit:4.12'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.annotation:annotation:1.0.2'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation  'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation "android.arch.lifecycle:extensions:1.1.0"
 
     // Rx Java
@@ -43,6 +46,33 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     // mockito
-    testImplementation 'org.mockito:mockito-core:1.10.19'
     testImplementation 'android.arch.core:core-testing:1.1.0'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.8.0'
+
+//    testImplementation 'org.mockito4kotlin:annotation:0.4.0'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
+    testImplementation 'org.mockito4kotlin:annotation:0.3.0'
+
+//    testImplementation group: 'com.nhaarman.mockitokotlin2', name: 'mockito-kotlin', version: '2.2.0'
+
+    /* // Powermock
+     testImplementation 'org.powermock:powermock-module-junit4:2.0.0'
+     testImplementation 'org.powermock:powermock-module-junit4-rule:2.0.0'
+     testImplementation 'org.powermock:powermock-api-mockito:2.0.0'
+     testImplementation 'org.powermock:powermock-classloading-xstream:2.0.0'*/
+
+
+    /*testImplementation 'org.powermock:powermock-api-mockito2:1.7.0'
+    testImplementation 'org.powermock:powermock-module-junit4:1.7.0'
+    testImplementation 'org.powermock:powermock-core:1.7.0'
+    testImplementation 'org.powermock:powermock-module-junit4-rule:1.7.0'*/
+
+
+    /* testImplementation 'junit:junit:4.11'
+    testImplementation 'org.mockito:mockito-core:2.4.0'
+    testImplementation 'org.powermock:powermock-api-mockito2:1.7.0RC2'
+    testImplementation 'org.powermock:powermock-module-junit4:1.7.0RC2'
+    testImplementation 'org.powermock:powermock-core:1.7.0RC2'*/
+
 }
