--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,19 +11,38 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!--<activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login"></activity>-->
-        <activity android:name=".testcallback.ui.LoginActivityRx">
+        <activity android:name="com.example.practice.rxjava.RxOperatorActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".post.presentation.posts.PostsDetailsActivity">
+        <activity android:name="com.example.practice.rxjava.FirstActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
+        <activity android:name="com.example.practice.rxjava.RxBasics">
+
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+        <!--
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:label="@string/title_activity_login"></activity>
+        -->
+        <activity android:name=".testcallback.ui.LoginActivityRx" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".post.presentation.posts.PostsDetailsActivity" />
     </application>
 
 </manifest>
