// Added Logging Intercepter gradle dep and done setup // Added Gson null serilization

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
+    // logging intercepter
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.3.1'
+
     // mockito
     testImplementation 'android.arch.core:core-testing:1.1.0'
     testImplementation 'junit:junit:4.12'
