Kotlin Scope Functions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,19 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.practice.retrofit.getrequestwithmultiplequeryparameter.GetRequestWithMultipleQueryParameter">
-
-        </activity>
-        <activity android:name="com.example.practice.retrofit.getrequestqueryparameter.GetRequestQueryParameter">
-
-        </activity>
-        <activity android:name="com.example.practice.retrofit.getrequestwithspecificendpoint.RetrofitGetRequestWithSpecificEndPointActivity"></activity>
-        <activity android:name="com.example.practice.retrofit.getrequest.RetrofitGetRequestActivity" >
+        <activity android:name="com.example.practice.kotlinscopefunction.KotlinExtensionFunction">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="com.example.practice.retrofit.getrequestwithmultiplequeryparameter.GetRequestWithMultipleQueryParameter"></activity>
+        <activity android:name="com.example.practice.retrofit.getrequestqueryparameter.GetRequestQueryParameter"></activity>
+        <activity android:name="com.example.practice.retrofit.getrequestwithspecificendpoint.RetrofitGetRequestWithSpecificEndPointActivity" />
+        <activity android:name="com.example.practice.retrofit.getrequest.RetrofitGetRequestActivity">
         </activity>
         <activity android:name="com.example.practice.rxjava.RxOperatorActivity" />
         <activity android:name="com.example.practice.rxjava.FirstActivity" />
