--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -48,35 +50,17 @@ dependencies {
     // logging intercepter
     implementation 'com.squareup.okhttp3:logging-interceptor:4.3.1'
 
+    // Dagger
+    implementation 'com.google.dagger:dagger:2.26'
+    kapt 'com.google.dagger:dagger-compiler:2.26'
+
     // mockito
     testImplementation 'android.arch.core:core-testing:1.1.0'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.8.0'
 
-
 //    testImplementation 'org.mockito4kotlin:annotation:0.4.0'
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
     testImplementation 'org.mockito4kotlin:annotation:0.3.0'
-
-//    testImplementation group: 'com.nhaarman.mockitokotlin2', name: 'mockito-kotlin', version: '2.2.0'
-
-    /* // Powermock
-     testImplementation 'org.powermock:powermock-module-junit4:2.0.0'
-     testImplementation 'org.powermock:powermock-module-junit4-rule:2.0.0'
-     testImplementation 'org.powermock:powermock-api-mockito:2.0.0'
-     testImplementation 'org.powermock:powermock-classloading-xstream:2.0.0'*/
-
-
-    /*testImplementation 'org.powermock:powermock-api-mockito2:1.7.0'
-    testImplementation 'org.powermock:powermock-module-junit4:1.7.0'
-    testImplementation 'org.powermock:powermock-core:1.7.0'
-    testImplementation 'org.powermock:powermock-module-junit4-rule:1.7.0'*/
-
-
-    /* testImplementation 'junit:junit:4.11'
-    testImplementation 'org.mockito:mockito-core:2.4.0'
-    testImplementation 'org.powermock:powermock-api-mockito2:1.7.0RC2'
-    testImplementation 'org.powermock:powermock-module-junit4:1.7.0RC2'
-    testImplementation 'org.powermock:powermock-core:1.7.0RC2'*/
 
 }
