Added Changes for Dagger setup 5. Provide Dep from outside lib 6. Interface Dep 7. Using Binds Anotation 8. Inject runtime value using module constructor 9. Inject values using builder

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.practice.daggersample.TestInjectActivity">
+        <activity android:name="com.example.practice.dagger.injectdepusingbuilder.InjectDepUsingBuilderActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.example.practice.dagger.injectdepusingmoduleconstructor.InjectDepUsingModuleConsActivity">
+
+        </activity>
+        <activity android:name="com.example.practice.dagger.daggerbindsanotation.DaggerBindAnotaActivity"></activity>
+        <activity android:name="com.example.practice.dagger.interfacedependancy.InterfaceDepActivity" />
+        <activity android:name="com.example.practice.dagger.daggeroutsidedep.DaggerOutsideDepActivity" />
+        <activity android:name="com.example.practice.dagger.daggersample.TestInjectActivity" />
         <!--
         <activity android:name="com.example.practice.daggerdemo.daggerdemoinject.DaggeConstructorInject">
             <intent-filter>
@@ -27,9 +34,7 @@
             </intent-filter>
         </activity>
         -->
-        <activity android:name="com.example.practice.kotlinscopefunction.KotlinExtensionFunction">
-
-        </activity>
+        <activity android:name="com.example.practice.kotlinscopefunction.KotlinExtensionFunction" />
         <activity android:name="com.example.practice.retrofit.getrequestwithmultiplequeryparameter.GetRequestWithMultipleQueryParameter" />
         <activity android:name="com.example.practice.retrofit.getrequestqueryparameter.GetRequestQueryParameter" />
         <activity android:name="com.example.practice.retrofit.getrequestwithspecificendpoint.RetrofitGetRequestWithSpecificEndPointActivity" />
