--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,12 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.26'
     kapt 'com.google.dagger:dagger-compiler:2.26'
 
+    // Dagger Android
+    implementation 'com.google.dagger:dagger-android:2.26'
+    implementation 'com.google.dagger:dagger-android-support:2.26'
+    // if you use the support libraries
+    kapt 'com.google.dagger:dagger-android-processor:2.26'
+
     // mockito
     testImplementation 'android.arch.core:core-testing:1.1.0'
     testImplementation 'junit:junit:4.12'
@@ -62,5 +68,9 @@ dependencies {
 //    testImplementation 'org.mockito4kotlin:annotation:0.4.0'
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
     testImplementation 'org.mockito4kotlin:annotation:0.3.0'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
 }
