--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,23 +5,28 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name="com.example.practice.dagger.daggerloginexample.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.practice.dagger.injectdepusingbuilder.InjectDepUsingBuilderActivity">
+        <activity android:name="com.example.practice.dagger.daggerloginexample.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.practice.dagger.injectdepusingmoduleconstructor.InjectDepUsingModuleConsActivity">
+        <activity android:name="com.example.practice.dagger.subcomponentwithbuilder.SubComponentBuilderActivity">
 
         </activity>
-        <activity android:name="com.example.practice.dagger.daggerbindsanotation.DaggerBindAnotaActivity"></activity>
+        <activity android:name="com.example.practice.dagger.daggersubcomponent.SubComponentActivity"></activity>
+        <activity android:name="com.example.practice.dagger.daggersingleton.DaggerSingleton" />
+        <activity android:name="com.example.practice.dagger.injectdepusingbuilder.InjectDepUsingBuilderActivity" />
+        <activity android:name="com.example.practice.dagger.injectdepusingmoduleconstructor.InjectDepUsingModuleConsActivity" />
+        <activity android:name="com.example.practice.dagger.daggerbindsanotation.DaggerBindAnotaActivity" />
         <activity android:name="com.example.practice.dagger.interfacedependancy.InterfaceDepActivity" />
         <activity android:name="com.example.practice.dagger.daggeroutsidedep.DaggerOutsideDepActivity" />
         <activity android:name="com.example.practice.dagger.daggersample.TestInjectActivity" />
