--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.practice.sealedclass.SealedClassTestActivity">
+        <activity android:name="com.example.uitestpractice.intenttest.ImplicitIntentDemoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.example.practice.fragmentsdemo.fragmentfactorydemo.HostActivity"></activity>
+        <activity android:name="com.example.practice.fragmentsdemo.MyFragmentDemoActivity"></activity>
+        <activity android:name="com.example.uitestpractice.fragmentuitest.MainFragmentContainerActivity">
+        </activity>
+        <activity android:name="com.example.uitestpractice.SecondActivity" />
+        <activity android:name="com.example.uitestpractice.FirstActivity" />
+        <activity android:name="com.example.uitestpractice.FirstUiTestActivity" />
+        <activity android:name="com.example.practice.services.ServiceDemoActivity" />
+        <activity android:name="com.example.practice.constraintlayout.TestConstriant" />
+        <activity android:name="com.example.practice.sealedclass.SealedClassTestActivity" />
         <activity android:name="com.example.practice.dagger.daggerloginexample.LoginActivity" />
-        <activity android:name="com.example.practice.dagger.subcomponentwithbuilder.SubComponentBuilderActivity"></activity>
+        <activity android:name="com.example.practice.dagger.subcomponentwithbuilder.SubComponentBuilderActivity" />
         <activity android:name="com.example.practice.dagger.daggersubcomponent.SubComponentActivity" />
         <activity android:name="com.example.practice.dagger.daggersingleton.DaggerSingleton" />
         <activity android:name="com.example.practice.dagger.injectdepusingbuilder.InjectDepUsingBuilderActivity" />
@@ -62,9 +72,11 @@
         -->
         <activity android:name=".testcallback.ui.LoginActivityRx" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".post.presentation.posts.PostsDetailsActivity">
+        <activity android:name=".post.presentation.posts.PostsDetailsActivity" />
 
-        </activity>
+        <service android:name="com.example.practice.services.MyService" />
+        <service android:name="com.example.practice.services.MediaPlayService" />
+
     </application>
 
 </manifest>
