--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,12 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        /*
+        Will add this later
+         def nav_version = "2.3.0-alpha04"
+         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"*/
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,7 +27,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
