--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.uitestpractice.intenttest.ImplicitIntentDemoActivity">
+        <activity android:name="com.example.practice.navigationgraph.NavigationGraphHostActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.practice.fragmentsdemo.fragmentfactorydemo.HostActivity"></activity>
-        <activity android:name="com.example.practice.fragmentsdemo.MyFragmentDemoActivity"></activity>
-        <activity android:name="com.example.uitestpractice.fragmentuitest.MainFragmentContainerActivity">
-        </activity>
+        <activity android:name="com.example.uitestpractice.intenttest.ImplicitIntentDemoActivity"></activity>
+        <activity android:name="com.example.practice.fragmentsdemo.fragmentfactorydemo.HostActivity" />
+        <activity android:name="com.example.practice.fragmentsdemo.MyFragmentDemoActivity" />
+        <activity android:name="com.example.uitestpractice.fragmentuitest.MainFragmentContainerActivity"></activity>
         <activity android:name="com.example.uitestpractice.SecondActivity" />
         <activity android:name="com.example.uitestpractice.FirstActivity" />
         <activity android:name="com.example.uitestpractice.FirstUiTestActivity" />
@@ -76,7 +76,6 @@
 
         <service android:name="com.example.practice.services.MyService" />
         <service android:name="com.example.practice.services.MediaPlayService" />
-
     </application>
 
 </manifest>
